pv_setup_module_environment("VV")
pv_process_modules()

# find_package(VTK REQUIRED COMPONENTS vtkSystemCommon)
# set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${VTK_CMAKE_DIR})
# include(vtkExternalModuleMacros)
# include(module.cmake)

# set(Module_SRCS
#   Filters/vtkPlaneFitter.h
# )
# vtk_module_libray(vtkVVMod)
